Skeleton Sketching crashes Blender #38547

Closed
opened 2014-02-08 14:15:27 +01:00 by ronan ducluzeau · 8 comments

System Information
Ubuntu 12.04 64 bits NVIDIA Quadro FX 3500

Blender Version
Broken: 2.69.10 6952bf2
Worked: 2.69.0 r60991

Short description of error
If you try to use Skeleton Sketching; Blender crashes.

Exact steps for others to reproduce the error
Open attached.blend.
Try to draw to a stroke by a mouse left click in 3DView.
SKcrash.blend

**System Information** Ubuntu 12.04 64 bits NVIDIA Quadro FX 3500 **Blender Version** Broken: 2.69.10 6952bf2 Worked: 2.69.0 r60991 **Short description of error** If you try to use Skeleton Sketching; Blender crashes. **Exact steps for others to reproduce the error** Open attached.blend. Try to draw to a stroke by a mouse left click in 3DView. [SKcrash.blend](https://archive.blender.org/developer/F76457/SKcrash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Confirmed on Windows 8.1 - Win64 bit (311883f)

Confirmed on Windows 8.1 - Win64 bit (311883f)

This issue was referenced by blender/blender-addons-contrib@e91ddf02a8

This issue was referenced by blender/blender-addons-contrib@e91ddf02a8cda6182db095abfc0f0752058712e7

This issue was referenced by e91ddf02a8

This issue was referenced by e91ddf02a8cda6182db095abfc0f0752058712e7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e91ddf02a8.

Closed by commit e91ddf02a8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38547
No description provided.