Fix T38547: crash in skeleton sketching.